Thu Feb 21 12:56:19 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* file.c (rb_group_member): get rid of NGROUPS dependency.
	  [Bug #7886] [ruby-core:52537]

Thu Feb 21 12:45:03 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (ruby_init_loadpath_safe): try two levels upper for stripping
	  libdir name.  [Bug #7874]

	* configure.in (libdir_basename): expand with multiarch in configure,
	  not to defer the expansion till ruby.pc.in and mkmf.rb.  [Bug #7874]

	* configure.in (libdir_basename): also -rpath and -install_name flags
	  are affected when libruby directory changes.  [Bug #7874]

Wed Feb 20 19:27:02 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (HAVE_RB_SCAN_ARGS_OPTIONAL_HASH): for
	  rb_scan_args() optional hash feature.  [Bug #7861]

Wed Feb 20 18:02:26 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (target_os): do not strip -gnu suffix on Linux if
	  --target is given explicitly.  [Bug #7874]

	* configure.in (libdirname): adjust library path name which libruby
	  files will be installed.  [Bug #7874]

	* tool/rbinstall.rb (libdir): ditto.

Wed Feb 20 13:37:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* ext/pty/pty.c: Documentation for the PTY module

Wed Feb 20 12:18:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* object.c: Document Data class [Bug #7890] [ruby-core:52549]
	  Patch by Matthew Mongeau

Wed Feb 20 11:50:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/mutex_m.rb: Add rdoc for Mutex_m module

Wed Feb 20 09:34:43 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/update_command.rb:  Create the installer after
	  options are processed.  [ruby-trunk - Bug #7779]
	* test/rubygems/test_gem_commands_update_command.rb:  Test for the
	  above.

Wed Feb 20 07:51:19 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb:  Use gsub instead of gsub! to avoid
	  altering @bin_dir.  Fixes tests on windows.  [ruby-trunk - Bug #7885]
